# check-json-schema-meta

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  Justfile  README.md  check_json_schema_meta.py  cliff.toml  pyproject.toml
.github/workflows/: prek-autoupdate.yml  prek.yml  pytest.yml
tests/: __init__.py  test_check_json_schema_meta.py
